fixtures/runtime/valid/runtime_types/void-return.php
<?php
function done(): void {
    return;
}

echo "before|", done(), "|after\n";
