fixtures/runtime/invalid/runtime_types/void-return-value.php
<?php
function bad(): void {
    return null;
}

bad();
